--- a/backend/package.json
+++ b/backend/package.json
@@ -25,19 +25,27 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.2",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
-    "@types/express": "^4.17.11",
+    "@types/eslint": "^7.2.14",
+    "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/prettier": "^2.3.2",
+    "@types/rimraf": "^3.0.1",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
