--- a/backend/package.json
+++ b/backend/package.json
@@ -25,11 +25,16 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.2",
+    "aws-lambda": "^1.0.6",
+    "aws-serverless-express": "^3.4.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
+    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-offline": "^7.0.0",
+    "serverless-plugin-optimize": "^4.2.1-rc.1",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
@@ -37,6 +42,8 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/aws-lambda": "^8.10.78",
+    "@types/aws-serverless-express": "^3.3.4",
     "@types/eslint": "^7.2.14",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/jest": "^26.0.22",
