--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Hiroshi MORISHIGE",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -18,7 +18,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "sls:deploy": "nest build && sls deploy",
+    "sls:offline": "nest build && sls offline start"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
