--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
+    "axios": "^0.21.1",
     "emotion-reset": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
