--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,6 +47,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "@types/testing-library__jest-dom": "^5.14.0",
     "@types/testing-library__user-event": "^4.2.0",
+    "msw": "^0.31.0",
     "react-test-renderer": "^17.0.2"
   }
 }
