--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.10.1",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.0",
