--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.18",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "msw-storybook-addon": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.10.1",
@@ -73,5 +74,9 @@
     "@types/testing-library__user-event": "^4.2.0",
     "msw": "^0.31.0",
     "react-test-renderer": "^17.0.2"
+  }
+  ,
+  "msw": {
+    "workerDirectory": "public"
   }
 }
