--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@types/react-redux": "^7.1.18",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "lodash": "^4.17.21",
     "msw-storybook-addon": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.10.1",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
@@ -68,14 +70,14 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.4",
     "@testing-library/react-hooks": "^7.0.1",
+    "@types/lodash": "^4.14.171",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-test-renderer": "^17.0.1",
     "@types/testing-library__jest-dom": "^5.14.0",
     "@types/testing-library__user-event": "^4.2.0",
     "msw": "^0.31.0",
     "react-test-renderer": "^17.0.2"
-  }
-  ,
+  },
   "msw": {
     "workerDirectory": "public"
   }
