:up: add jest addOn

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@emotion/jest": "^11.3.0",
     "@storybook/addon-actions": "^6.3.4",
     "@storybook/addon-essentials": "^6.3.4",
     "@storybook/addon-links": "^6.3.4",
