--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.0",
-    "@reduxjs/toolkit": "^1.6.0",
+    "@emotion/react": "^11.9.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.1.9",
@@ -17,6 +17,7 @@
     "date-fns": "^2.22.1",
     "lodash": "^4.17.21",
     "msw-storybook-addon": "^1.1.0",
+    "postcss-normalize": "^10.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
@@ -25,7 +26,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "sanitize.css": "^12.0.1",
     "typescript": "~4.3.5"
   },
