--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "lodash": "^4.17.21",
-    "msw-storybook-addon": "^1.1.0",
+    "msw-storybook-addon": "^1.6.3",
     "postcss-normalize": "^10.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -65,12 +65,14 @@
   },
   "devDependencies": {
     "@emotion/jest": "^11.3.0",
-    "@storybook/addon-actions": "^6.3.4",
-    "@storybook/addon-essentials": "^6.3.4",
-    "@storybook/addon-links": "^6.3.4",
-    "@storybook/node-logger": "^6.3.4",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.4",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/builder-webpack5": "^6.4.22",
+    "@storybook/manager-webpack5": "^6.4.22",
+    "@storybook/node-logger": "^6.4.22",
+    "@storybook/preset-create-react-app": "^4.1.0",
+    "@storybook/react": "^6.4.22",
     "@testing-library/react-hooks": "^7.0.1",
     "@types/lodash": "^4.14.171",
     "@types/react-router-dom": "^5.1.8",
@@ -78,7 +80,8 @@
     "@types/testing-library__jest-dom": "^5.14.0",
     "@types/testing-library__user-event": "^4.2.0",
     "msw": "^0.31.0",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "webpack": "5"
   },
   "msw": {
     "workerDirectory": "public"
