--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "6",
+    "react-router-dom-v5-compat": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sanitize.css": "^12.0.1",
     "typescript": "~4.3.5"
@@ -75,7 +76,7 @@
     "@storybook/react": "^6.4.22",
     "@testing-library/react-hooks": "^7.0.1",
     "@types/lodash": "^4.14.171",
-    "@types/react-router-dom": "^5.1.8",
+    "@types/react-router-dom": "5",
     "@types/react-test-renderer": "^17.0.1",
     "@types/testing-library__jest-dom": "^5.14.0",
     "@types/testing-library__user-event": "^4.2.0",
